@@ -19,6 +19,7 @@
  *
  */
 #include "BetaFactory.hxx"
+#include "SpecFunc.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
@@ -65,7 +66,8 @@ Beta BetaFactory::buildAsBeta(const NumericalSample & sample) const
   const NumericalScalar a(xMin - std::abs(xMin) / (2.0 + size));
   const NumericalScalar xMax(sample.getMax()[0]);
   const NumericalScalar b(xMax + std::abs(xMax) / (2.0 + size));
-  if (a >= b) throw InvalidArgumentException(HERE) << "Error: can build a Beta distribution only if a < b, here a=" << a << " and b=" << b;
+  // Check that 1.) a and b are not NaN, 2.) a < b, 3.) b is not +Inf
+  if (!(a < b) || SpecFunc::IsInf(b)) throw InvalidArgumentException(HERE) << "Error: can build a Beta distribution only if a < b, here a=" << a << " and b=" << b;
   const NumericalScalar mean(sample.computeMean()[0]);
   const NumericalScalar sigma(sample.computeStandardDeviationPerComponent()[0]);
   const NumericalScalar t((b - mean) * (mean - a) / (sigma * sigma) - 1.0);
