@@ -69,7 +69,7 @@ Poisson PoissonFactory::buildAsPoisson(const NumericalSample & sample) const
     if ((x != trunc(x)) || (x < 0.0)) throw InvalidArgumentException(HERE) << "Error: can build a Poisson distribution only from a sample with integer components >= 0, here sample[" << i << "][0]=" << x;
     lambda += x;
   }
-  if (lambda <= 0.0) throw InvalidArgumentException(HERE) << "Error: can build a poisson distribution only if lambda > 0, here lambda=" << lambda;
+  if (!(lambda > 0.0) || SpecFunc::IsInf(lambda)) throw InvalidArgumentException(HERE) << "Error: can build a poisson distribution only if lambda > 0, here lambda=" << lambda;
   Poisson result(lambda / size);
   result.setDescription(sample.getDescription());
   return result;
