@@ -22,6 +22,7 @@
  * Enhanced print of samples
 
 === Bug fixes ===
+ * #796 (Beta distribution: if sample contains Inf, freeze on getSample)
  * #798 (Error message misstyping (Gamma distribution))
 
 == 1.6 release (2015-08-14) == #release-1.6
